--- a/xdocs/user-guide/core/test/02-utilities.tex
+++ b/xdocs/user-guide/core/test/02-utilities.tex
@@ -1,368 +1,4 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentclass[oneside,final,12pt]{extreport}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage[utf8]{inputenc}
-\usepackage[T2A]{fontenc}
-\usepackage[english]{babel}
-\usepackage{vmargin}
-\setpapersize{A4}
-\usepackage{indentfirst}
-\usepackage{graphicx}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Page Headers
-
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\fancyhf{}
-\lhead{MicroTESK User Guide [Draft]}
-\rfoot{\thepage}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Listing Style
-
-\usepackage{listings}
-\usepackage[dvipsnames]{xcolor}
-
-\definecolor{javared}{rgb}{0.6,0,0}
-\definecolor{javagreen}{rgb}{0.25,0.5,0.35}
-\definecolor{javapurple}{rgb}{0.5,0,0.35}
-\definecolor{javablue}{rgb}{0.25,0.35,0.75}
-
-\lstset{
- language=C,
- frame=single,
- basicstyle=\ttfamily\scriptsize,
- commentstyle=\itshape,
- emph={op, mode, reg, alias, mem, type, let, card, int, syntax, image, format, action,
-       if, then, else, elif, endif, coerce, exception, address, segment, buffer, register,
-       memory, mmu, range, ways, sets, match, tag, index, entry, policy, read, write,
-       var, hit, path, transition, guard},
- emphstyle={\bfseries}}
-
-\usepackage{listings}
-\lstloadlanguages{Ruby}
-\lstset{
-basicstyle=\ttfamily\footnotesize\color{black},
-commentstyle=\ttfamily\color{javagreen},
-keywordstyle=\bfseries\color{javapurple},
-stringstyle=\color{javablue},
-showstringspaces=false,
-basewidth={.48em}
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Links and References
-
-\usepackage{hyperref}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{document}
-
-\begin{titlepage}
-\begin{center}
-\Large{Institute for System Programming of the Russian Academy of Sciences}
-
-\vfill
-
-
-\bf\Large{MicroTESK User Guide}
-
-(UNDER DEVELOPMENT)
-
-\vfill
-
-\bf
-Moscow 2016
-\end{center}
-\end{titlepage}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newpage
-\stepcounter{page} % Increase page counter by one
-\tableofcontents
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\chapter{Overview}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\chapter{Installation}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{System Requirements}
-
-MicroTESK is a set of Java-based utilities that are run from the command line.
-It can be used on \textbf{\textit{Windows}}, \textbf{\textit{Linux}} and
-\textbf{\textit{OS X}} machines that have \textbf{\textit{JDK 1.7 or later}}
-installed. To build MicroTESK from source code or to build the generated
-Java models, \textbf{\textit{Apache Ant version 1.8 or later}} is required.
-To generate test data based on constraints, MicroTESK needs
-the \textbf{\textit{Microsoft Research Z3}} or \textbf{\textit{CVC4}} solver that
-can work on the corresponding operating system.
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Installation Steps}
-
-To install MicroTESK, the following steps should be performed:
-
-\begin{enumerate}
-  \item Download from \url{http://forge.ispras.ru/projects/microtesk/files} and unpack
-        the MicroTESK installation package (the \texttt{.tar.gz} file, latest release) to your
-        computer. The folder to which it was unpacked will be further referred to as
-        the installation directory (\texttt{<installation dir>}).
-
-  \item Declare the \texttt{MICROTESK{\_}HOME} environment variable and set its value to the path to
-        the installation directory (see the \hyperref[Setting_Environment_Variables]
-        {Setting Environment Variables} section).
-
-  \item Set the \texttt{<installation dir>/bin} folder as the working directory (add the path to
-        the \texttt{PATH} environment variable) to be able to run MicroTESK utilities from any path.
-
-  \item Note: Required for constraint-based generation. Download and install constraint
-        solver tools to the \texttt{<installation dir>/tools} directory (see the
-        \hyperref[Installing_Constraint_Solvers]{Installing Constraint Solvers} section).
-\end{enumerate}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Setting Environment Variables}
-\label{Setting_Environment_Variables}
-
-\paragraph{Windows}
-
-\begin{enumerate}
-  \item Open the \texttt{System Properties} window.
-  \item Switch to the \texttt{Advanced} tab.
-  \item Click on \texttt{Environment Variables}.
-  \item Click \texttt{New..} under \texttt{System Variables}.
-  \item In the \texttt{New System Variable} dialog, specify variable name as
-        \texttt{MICROTESK{\_}HOME} and variable value as \texttt{<installation dir>}.
-  \item Click \texttt{OK} on all open windows.
-  \item Reopen the command prompt window.
-\end{enumerate}
-
-\paragraph{Linux and OS X} ~\\
-
-Add the command below to the \texttt{\textasciitilde{}.bash{\_}profile} file
-(\textbf{\textit{Linux}}) or the \texttt{\textasciitilde{}/.profile} file (\textbf{\textit{OS X}}):
-
-\begin{lstlisting}[language=bash]
-export MICROTESK_HOME=<installation dir>
-\end{lstlisting}
-
-To start editing the file, type \texttt{vi \textasciitilde{}/.bash{\_}profile}
-(or \texttt{vi \textasciitilde{}/.profile}).
-Changes will be applied after restarting the command-line terminal or reboot. You can also
-run the command in your command-line terminal to make temporary changes.
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\subsection{Installing Constraint Solvers}
-\label{Installing_Constraint_Solvers}
-
-To generate test data based on constraints, MicroTESK requires external constraint solvers.
-The current version supports the \href{https://github.com/z3prover}{Z3} and
-\href{http://cvc4.cs.nyu.edu}{CVC4} constraint solvers. Constraint executables should be
-downloaded and placed to the \texttt{<installation dir>/tools} directory.
-
-\paragraph{Using Environment Variables} ~\\
-
-If solvers are already installed in another directory, to let MicroTESK find them, the following
-environment variables can be used: \texttt{Z3{\_}PATH} and \texttt{CVC4{\_}PATH}. They specify
-the paths to the Z3 and CVC4 excutables correspondingly.
-
-\paragraph{Installing Z3}
-
-\begin{itemize}
-\item \textbf{\textit{Windows}} users should download Z3 (32 or 64-bit version) from the following
-       page:\url{http://z3.codeplex.com/releases} and unpack the archive to the
-      \texttt{<installation dir>/tools/z3/windows} directory. Note: the executable file path
-      is \texttt{<windows>/z3/bin/z3.exe}.
-
-\item \textbf{\textit{UNIX}} and \textbf{\textit{Linux}} users should use one of the links below
-      and and unpack the archive to the \texttt{<installation dir>/tools/z3/unix} directory.
-      Note: the executable file path is \texttt{<unix>/z3/bin/z3}.
-
-      \begin{tabular} {| l | r |} \hline
-      Debian  x64 & \url{http://z3.codeplex.com/releases/view/101916} \\ \hline
-      Ubuntu  x86 & \url{http://z3.codeplex.com/releases/view/101913} \\ \hline
-      Ubuntu  x64 & \url{http://z3.codeplex.com/releases/view/101911} \\ \hline
-      FreeBSD x64 & \url{http://z3.codeplex.com/releases/view/101907} \\ \hline
-      \end{tabular}
-
-\item \textbf{\textit{OS X}} users should download Z3 from
-      \url{http://z3.codeplex.com/releases/view/101918} and unpack the archive to the
-      \texttt{<installation dir>/z3/osx} directory. Note: the executable file path is
-      \texttt{<osx>/z3/bin/z3}.
-
-\end{itemize}
-
-\paragraph{Installing CVC4}
-
-\begin{itemize}
-\item \textbf{\textit{Windows}} users should download the latest version of CVC4 binary from
-      \url{http://cvc4.cs.nyu.edu/builds/win32-opt/} and save it to the
-      \texttt{<installation dir>/tools/cvc4/windows} directory as \texttt{cvc4.exe}.
-
-\item \textbf{\textit{Linux}} users download the latest version of CVC4 binary from
-      \url{http://cvc4.cs.nyu.edu/builds/i386-linux-opt/unstable/} (32-bit version) or
-      \url{http://cvc4.cs.nyu.edu/builds/x86_64-linux-opt/unstable/} (64-bit version) and
-      save it to the \texttt{<installation dir>/tools/cvc4/unix} directory as \texttt{cvc4}.
-
-\item \textbf{\textit{OS X}} users should download the latest version of CVC4 distribution
-      package from \url{http://cvc4.cs.nyu.edu/builds/macos/} and install it.
-      The CVC4 binary should be copied to \texttt{<installation dir>/tools/cvc4/osx} as
-      \texttt{cvc4} or linked to this file name via a symbolic link.
-
-\end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Installation Directory Structure}
-
-The MicroTESK installation directory contains the following subdirectories: \\
-
-\begin{tabular}{ | l | l |}
-  \hline
-  \textbf{arch} & Microprocessor specifications and test templates \\ \hline
-  \textbf{bin}  & Scripts to run modeling and test generation tasks \\ \hline
-  \textbf{doc}  & Documentation \\ \hline
-  \textbf{etc}  & Configuration files \\ \hline
-  \textbf{gen}  & Generated code of microprocessor models \\ \hline
-  \textbf{lib}  & JAR files and Ruby scripts to perform modeling and \\
-  ~             & test generation tasks \\ \hline
-  \textbf{src}  & Source code of MicroTESK \\ \hline
-\end{tabular}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Running}
-
-To generate a Java model of a microprocessor from its nML specification, a user
-needs to run the \texttt{compile.sh} script (Unix, Linux, OS X) or the \texttt{compile.bat}
-script (Windows). For example, the following command generates a model for the miniMIPS
-specification:
-
-\begin{lstlisting}[language=bash]
-sh bin/compile.sh arch/minimips/model/minimips.nml
-\end{lstlisting}
-
-NOTE: Models for all demo specifications are already built and included in the
-MicroTESK distribution package. So a user can start working with MicroTESK from
-generating test programs for these models.
-
-To generate a test program, a user needs to use the \texttt{generate.sh} script
-(Unix, Linux, OS X) or the \texttt{generate.bat} script (Windows). The scripts
-require the following parameters:
-
-\begin{itemize}
-\item model name;
-\item test template file;
-\item target test program source code file.
-\end{itemize}
-
-For example, the command below runs the \texttt{euclid.rb} test template for
-the miniMIPS model generated by the command from the previous example and saves
-the generated test program to an assembler file. The file name is based on values
-of the \texttt{--code-file-prefix} and \texttt{--code-file-extension} options.
-
-\begin{lstlisting}[language=bash]
-sh bin/generate.sh minimips arch/minimips/templates/euclid.rb
-\end{lstlisting}
-
-To specify whether Z3 or CVC4 should be used to solve constraints,
-a user needs to specify the \texttt{-s} or \texttt{--solver} command-line option as \texttt{z3}
-or \texttt{cvc4} respectively. By default, Z3 will be used. Here is an example:
-
-\begin{lstlisting}[language=bash]
-sh bin/generate.sh -s cvc4 minimips arch/minimips/templates/constraint.rb
-\end{lstlisting}
-
-More information on command-line options can be found on the
-\hyperref[Command_Line_Options]{Command-Line Options} section.
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Command-Line Options}
-\label{Command_Line_Options}
-
-MicroTESK works in two modes: \emph{specification translation} and \emph{test generation},
-which are enabled with the \texttt{--translate} (used by default) and \texttt{--generate} keys
-correspondingly. In addition, the \texttt{--help} key prints information on the command-line format.
-
-The \texttt{--translate} and \texttt{--generate} keys are inserted into the command-line by
-\texttt{compile.sh}/\texttt{compile.bat} and \texttt{generate.sh}/\texttt{generate.bat} scripts
-correspondingly. Other options should be specified explicitly to customize the behavior of MicroTESK.
-Here is the list of options:\\
-
-\begin{tabular}{ | p{4cm} | p{1cm} | p{5cm} | p{2.5cm} |}
-  \hline
-  \textbf{Full name} & \textbf{Short name} & \textbf{Description} & \textbf{Requires} \\ \hline
-  --help & -h & Shows help message & \\ \hline
-  --verbose & -v & Enables printing diagnostic messages & \\ \hline
-  --translate & -t & Translates formal specifications & \\ \hline
-  --generate & -g & Generates test programs & \\ \hline
-  --output-dir <arg> & -od & Sets where to place generated files & \\ \hline
-  --include <arg> & -i & Sets include files directories & --translate \\ \hline
-  --extension-dir <arg> & -ed & Sets directory that stores user-defined Java code & --translate \\ \hline
-  --random-seed <arg> & -rs & Sets seed for randomizer & --generate \\ \hline
-  --solver <arg> & -s & Sets constraint solver engine to be used & --generate \\ \hline
-  --branch-exec-limit <arg> & -bel & Sets the limit on control transfers to detect endless loops & --generate \\ \hline
-  --solver-debug & -sd & Enables debug mode for SMT solvers & --generate \\ \hline
-  --tarmac-log & -tl & Saves simulator log in Tarmac format & --generate \\ \hline
-  --self-checks & -sc & Inserts self-checking code into test programs & --generate \\ \hline
-  --default-test-data & -dtd & Enables generation of default test data & --generate \\ \hline
-  --arch-dirs <arg> & -ad & Home directories for tested architectures & --generate \\ \hline
-  --rate-limit <arg> & -rl & Generation rate limit, causes error when broken & --generate \\ \hline
-  --code-file-extension <arg> & -cfe & The output file extension & --generate \\ \hline
-  --code-file-prefix <arg> & -cfp & The output file prefix (file names are as follows prefix{\_}xxxx.ext, where xxxx is a 4-digit decimal number) & --generate \\ \hline
-  --data-file-extension <arg> & -dfe & The data file extension & --generate \\ \hline
-  --data-file-prefix <arg> & -dfp & The data file prefix & --generate \\ \hline
-\end{tabular}
-
-\begin{tabular}{ | p{4cm} | p{1cm} | p{5cm} | p{2.5cm} |}
-  \hline
-  --exception-file-prefix <arg> & -efp & The exception handler file prefix & --generate \\ \hline
-  --program-length-limit <arg> & -pll & The maximum number of instructions in output programs & --generate \\ \hline
-  --trace-length-limit <arg> & -tll & The maximum length of execution traces of output programs & --generate \\ \hline
-  --comments-enabled & -ce & Enables printing comments; if not specified no comments are printed & --generate \\ \hline
-  --comments-debug & -cd & Enables printing detailed comments; must be used together with --comments-enabled  & --generate \\ \hline
-  --no-simulation & -ns & Disables simulation of generated test programs on the model & --generate \\ \hline
-  --time-statistics & -ts & Enables printing time statistics & --generate \\ \hline
-\end{tabular}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Settings File}
-
-Default values of options are stored in the \texttt{<MICROTESK{\_}HOME>/etc/settings.xml}
-configururation file that has the following format:
-
-\begin{lstlisting}[language=ruby]
-<?xml version="1.0" encoding="utf-8"?>
-<settings>
-  <setting name="random-seed" value="0"/>
-  <setting name="branch-exec-limit" value="1000"/>
-  <setting name="code-file-extension" value="asm"/>
-  <setting name="code-file-prefix" value="test"/>
-  <setting name="data-file-extension" value="dat"/>
-  <setting name="data-file-prefix" value="test"/>
-  <setting name="exception-file-prefix" value="test_except"/>
-  <setting name="program-length-limit" value="1000"/>
-  <setting name="trace-length-limit" value="1000"/>
-  <setting name="comments-enabled" value=""/>
-  <setting name="comments-debug" value=""/>
-  <setting name="default-test-data" value=""/>
-  <setting
-    name="arch-dirs" 
-    value="cpu=arch/demo/cpu/settings.xml:minimips=arch/minimips/settings.xml"
-  />
-</settings>
-\end{lstlisting}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\chapter{Test Templates}
+\chapter{Basic Functions}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -1250,72 +886,3 @@ exception_handler {
   }
 }
 \end{lstlisting}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\chapter{Test Engine Branch}
-
-\section{Parameters}
-
-\begin{itemize}
-\item \emph{branch{\_}exec{\_}limit} is an upper bound for the number of executions of a single branch instruction;
-\item \emph{trace{\_}count{\_}limit} is an upper bound for the number of execution traces to be returned.
-\end{itemize}
-
-More information on the parameters is given in the “Execution Traces Enumeration” section.
-
-\section{Description}
-
-Functioning of the \emph{branch} test engine includes the following steps:
-
-\begin{enumerate}
-  \item construction of a \emph{branch structure} of an abstract test sequence;
-  \item enumeration of \emph{execution traces} of the branch structure;
-  \item concretization of the test sequence for each execution trace:
-  \begin{enumerate}
-    \item construction of a \emph{control} code;
-    \item construction of an \emph{initialization} code.
-  \end{enumerate}
-\end{enumerate}
-
-Let \emph{D} be the size of the delay slot for an architecture under scrutiny (e.g., \emph{D}=1
-for MIPS, and \emph{D}=0 for ARM).
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\chapter{Customization}
-
-\section{Data Generators}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\chapter{Appendixes}
-
-\section{References}
-
-% Related nML publications/documents
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\addcontentsline{toc}{section}{\numberline{}Bibliography}
-\begin{thebibliography}{1}
-
-\bibitem{freericks}
-M.~Freericks.
-\emph{The nML Machine Description Formalism}.
-Technical Report TR SM-IMP/DIST/08, TU Berlin CS Department, 1993.
-
-\bibitem{ruby-site}
-\emph{Ruby site} -- \url{http://www.ruby-lang.org}
-
-\bibitem{ruby-matz}
-Flanagan D., Matsumoto Y.
-\emph{The Ruby Programming Language}.
-O’Reilly Media, Sebastopol, 2008.
-
-\bibitem{jruby-site}
-\emph{JRuby site} -- \url{http://jruby.org}
-
-\end{thebibliography}
-
-\end{document}
