MicroTESK Testing Guide reformatting.
Signed-off-by: Alexander Kamkin <kamkin@ispras.ru>

--- a/xdocs/user-guide/core/test/src/biblio.tex
+++ b/xdocs/user-guide/core/test/src/biblio.tex
@@ -1,4 +1,4 @@
-\chapter{Bibliography}
+\addcontentsline{toc}{section}{\numberline{}Bibliography}
 \begin{thebibliography}{99}
 
 \bibitem{freericks}
