Memory-configuration document moved to MicroTESK User Guide.
Signed-off-by: Alexander Kamkin <kamkin@ispras.ru>

--- a/xdocs/user-guide/core/test/src/MicroTESK.TestGuide.tex
+++ b/xdocs/user-guide/core/test/src/MicroTESK.TestGuide.tex
@@ -90,6 +90,7 @@ All rights reserved
 \include{sequence}
 \include{data}
 \include{engines}
+\include{memconfig}
 \include{biblio}
 
 \end{document}
